--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
+@import "tailwindcss/preflight";
+@import "tailwindcss/utilities";
+
 @import "tailwindcss";
+
 
 :root {
   --background: #ffffff;
@@ -19,8 +23,11 @@
   }
 }
 
+html{
+  overflow-x: hidden;
+}
+
 body {
-  background: var(--background);
-  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(#151515,#000000);
 }
